--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       NODE_ENV: development
     volumes:
       - ./:/app
-      # Avoid overriding node_modules with the bind mount
-      - /app/node_modules
+      # Use a NAMED volume for node_modules so we can populate it and reuse across runs
+      - web-node_modules:/app/node_modules
     depends_on:
       db:
         condition: service_healthy
@@ -73,3 +73,4 @@ services:
 volumes:
   postgres-data:
   pgadmin-data:
+  web-node_modules:
