--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "jose": "^6.1.0",
     "next": "16.0.1",
     "pg": "^8.16.3",
     "react": "19.2.0",
